# kumiko-rs

./: Cargo.toml  Cargo.toml.old  README.md  compare_panels.py  flamegraph.html  out.perf  panels.json  panels_python.json  perf.data  perf.data.old  scppt.py
kumiko-cli/: Cargo.toml
kumiko-cli/kumiko_report/: reader.js  report.html
kumiko-cli/output_panels/: 0002.json  0004.json  0019.json  0032.json  0043.json  0048.json  0049.json  0073.json  0074.json  0085.json  0102.json  0108.json
kumiko-cli/src/: html_report.rs  main.rs
kumiko-wasm/: Cargo.toml
kumiko-wasm/src/: lib.rs
kumiko-wasm/www/: index.html  main.js  reader.js  style.css
kumiko_report/: reader.js  report.html
libkumiko/: Cargo.toml
libkumiko/src/: config.rs  lib.rs  panel.rs  processing.rs  utils.rs
output_panels/: 0001.json  0002.json  0003.json  0004.json  0005.json  0006.json  0007.json  0008.json  0009.json  0010.json  0011.json  0012.json  0013.json  0014.json  0015.json  0016.json  0017.json  0018.json  0019.json  0020.json  0021.json  0022.json  0023.json  0025.json  0026.json  0027.json  0028.json  0029.json  0030.json  0031.json  0032.json  0033.json  0034.json  0035.json  0036.json  0037.json  0038.json  0039.json  0040.json  0041.json  (+91 more)
src/: main.rs
ssrc/: main.rs
