[package]
name = "libkumiko"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "gif", "webp", "tiff", "bmp", "ico", "hdr", "pnm", "tga", "qoi"] }
imageproc = { version = "0.23", default-features = false, features = ["rayon"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
